--- a/Index.html
+++ b/Index.html
@@ -7,9 +7,12 @@
     <title>Document</title>
   </head>
   <body>
-    Assignment1 - <a href="./Assignment1.html">Assignment1</a><br />
-    Assignment2 - <a href="./Assignment2.html">Assignment2</a><br />
-    Assignment3 - <a href="./Assignment3.html">Assignment3</a><br />
-    Assignment4 - <a href="./Index.html">Assignment4</a><br />
+    <h1>Full Stack Development</h1>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea omnis nemo
+      qui beatae repellat voluptatibus commodi, deserunt atque est dignissimos
+      reiciendis obcaecati magnam dolorum perferendis accusantium velit suscipit
+      deleniti error.
+    </p>
   </body>
 </html>
