--- a/Assignment4.html
+++ b/Assignment4.html
@@ -11,5 +11,7 @@
     Assignment2 - <a href="./Assignment2.html">Assignment2</a><br />
     Assignment3 - <a href="./Index.html">Assignment3</a><br />
     Assignment4 - <a href="./Assignment4.html">Assignment4</a><br />
+    Assignment5 - <a href="./Assignment5/index.html">Assignment5</a><br />
+    Assignment6 - <a href="./Page/Assignment6.html">Assignment6</a><br />
   </body>
 </html>
