--- a/Assignment5/Home/practical1.html
+++ b/Assignment5/Home/practical1.html
@@ -1,32 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Full Stack Development</title>
-</head>
-<body>
-    <h2 style="color: red;">
-        Practical-1  About full stack development
-    </h2>
-    <h2>
-     Welcome to Full Stack Web Development
-    </h3>
-    <h3>
-        About the Course
-    </h4>
-    <h4>
-        Full stack development refers to the development of both front end(client side) and back end(server side) portions of web application.
-        In nowadays trends MNC's are recuriting most of the full stack developers and in pandemic time the jobs of full stack web developers were increased.
-        Full stack web development is the better option nowadays as companies don't want to hire front end and back end developers as in most of the cases their is lack of coordination.
-
-       
-
-    </h5>
-    <h1 style="text-align: center;">
-        Welcome to this course !!!.
-    </h1>
-</body>
+  <head>
+    <title>Assignment-1</title>
+  </head>
+  <body>
+    <h1>Welcome to Full Stack Course</h1>
+    <h2>About Course</h2>
+    <p>
+      Lorem assumenda excepturi eligendi repellendus eos. Error tempora, rem
+      sunt, saepe veritatis obcaecati, blanditiis praesentium aperiam ut
+      consequuntur ea consequatur quaerat quis provident culpa explicabo
+      nesciunt in? Facere quasi earum incidunt, deleniti consequuntur itaque
+      nesciunt vitae minima, porro tempore error libero magnam unde officia
+      rerum eligendi optio non eveniet. Nostrum maiores quos doloribus culpa
+      ipsa quisquam, repudiandae quis similique. Quos nemo, corporis recusandae
+      tenetur eveniet dicta eius exercitationem neque iusto libero provident
+      quas accusamus accusantium. Impedit molestias eum nam, sequi provident
+      facere placeat nihil, quo deserunt voluptatem eius blanditiis nesciunt
+      consequuntur mollitia, explicabo nostrum voluptatum maiores numquam quis
+      iure ea excepturi? Ea culpa qui vel tenetur, aperiam possimus aut eaque
+      magnam aspernatur cupiditate quisquam? Dolorem, reprehenderit illo
+      similique deleniti rem consectetur. Laboriosam dolores id culpa eligendi,
+      cumque repellat veritatis a aut, necessitatibus quasi, quod voluptas
+      repellendus possimus quos. Repudiandae, magnam animi! Quaerat reiciendis
+      eos error quae ipsam fuga in voluptas perferendis maxime sequi expedita
+      quo delectus inventore dignissimos quod rerum necessitatibus ratione,
+      corporis beatae, dicta optio officia ea. Qui mollitia explicabo, expedita
+      aliquam unde magnam error, omnis libero officiis aspernatur repellat!
+    </p>
+  </body>
 </html>
