--- a/Assignment5/Home/practical4.html
+++ b/Assignment5/Home/practical4.html
@@ -1,33 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <h2 >
-        Practical Performed Till Date
-    </h2>
-
-    <h4 style="color: red;" >
-       I-Practical
-    </h4>
-    <a href="./practical1.html">practical1</a>
-    <h4 style="color: saddlebrown;">
-        II-Practical
-    </h4>
-    <a href="./practical2.html">pracrical2</a>
-    <h4>
-        III-Practical
-    </h4>
-    <a href="./practical3.html">Practical3</a>
-    <h4 style="color: rgb(0, 17, 255);">
-        IV-Practical
-    </h4>
-    <a href="./practical4.html">Practical-4</a>
-
-</body>
+  </head>
+  <body>
+    Assignment1 - <a href="./Assignment1.html">Assignment1</a><br />
+    Assignment2 - <a href="./Assignment2.html">Assignment2</a><br />
+    Assignment3 - <a href="./Index.html">Assignment3</a><br />
+    Assignment4 - <a href="./Assignment4.html">Assignment4</a><br />
+    Assignment5 - <a href="./Assignment5/index.html">Assignment5</a><br />
+    Assignment6 - <a href="./Page/Assignment6.html">Assignment6</a><br />
+  </body>
 </html>
