--- a/Assignment5/Home/practical4.html
+++ b/Assignment5/Home/practical4.html
@@ -7,11 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    Assignment1 - <a href="./Assignment1.html">Assignment1</a><br />
-    Assignment2 - <a href="./Assignment2.html">Assignment2</a><br />
-    Assignment3 - <a href="./Index.html">Assignment3</a><br />
-    Assignment4 - <a href="./Assignment4.html">Assignment4</a><br />
-    Assignment5 - <a href="./Assignment5/index.html">Assignment5</a><br />
-    Assignment6 - <a href="./Page/Assignment6.html">Assignment6</a><br />
+    Assignment1 - <a href="../../Assignment1.html">Assignment1</a><br />
+    Assignment2 - <a href="../../Assignment2.html">Assignment2</a><br />
+    Assignment3 - <a href="../../Index.html">Assignment3</a><br />
+    Assignment4 - <a href="../../Assignment4.html">Assignment4</a><br />
+    Assignment5 - <a href="../../Assignment5/index.html">Assignment5</a><br />
+    Assignment6 - <a href="../../Page/Assignment6.html">Assignment6</a><br />
   </body>
 </html>
