--- a/Assignment4.html
+++ b/Assignment4.html
@@ -13,5 +13,6 @@
     Assignment4 - <a href="./Assignment4.html">Assignment4</a><br />
     Assignment5 - <a href="./Assignment5/index.html">Assignment5</a><br />
     Assignment6 - <a href="./Page/Assignment6.html">Assignment6</a><br />
+    Assignment7 - <a href="./Page/Layout_assignment7.html">Assignment7</a><br />
   </body>
 </html>
