--- a/Assignment4.html
+++ b/Assignment4.html
@@ -14,5 +14,6 @@
     Assignment5 - <a href="./Assignment5/index.html">Assignment5</a><br />
     Assignment6 - <a href="./Page/Assignment6.html">Assignment6</a><br />
     Assignment7 - <a href="./Page/Layout_assignment7.html">Assignment7</a><br />
+    Assignment8 - <a href="./Page/Assignment8.html">Assignment8</a><br />
   </body>
 </html>
