class practical Updated

--- a/Assignment4.html
+++ b/Assignment4.html
@@ -17,5 +17,7 @@
     Assignment8 - <a href="./Page/Assignment8.html">Assignment8</a><br />
     Assignment9 - <a href="./Page/Assignment9.html">Assignment9</a><br />
     Assignment10 - <a href="./Page/Assignment10.html">Assignment10</a><br />
+    Assignment10 - <a href="./Class Practicals/checkTable.html">Assignment13</a
+    ><br />
   </body>
 </html>
