Counter - Assignment14 Updated

--- a/Assignment4.html
+++ b/Assignment4.html
@@ -17,7 +17,10 @@
     Assignment8 - <a href="./Page/Assignment8.html">Assignment8</a><br />
     Assignment9 - <a href="./Page/Assignment9.html">Assignment9</a><br />
     Assignment10 - <a href="./Page/Assignment10.html">Assignment10</a><br />
-    Assignment10 - <a href="./Class Practicals/checkTable.html">Assignment13</a
+    Assignment13 - <a href="./Class Practicals/checkTable.html">Assignment13</a
     ><br />
+
+    Assignment14 -
+    <a href="./Class Practicals/HTML/counter.html">Assignment13</a><br />
   </body>
 </html>
